# employee

./: Dockerfile  compose.yaml  dev.ipynb  docker-entrypoint.sh  label_encoders.pkl  main.py  pyproject.toml  rf_attrition_model.pkl
