[project]
name = "app"
version = "0.1.0"
description = "Employee Attrition Prediction FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "joblib>=1.4.2"
]
